tasky-main/tasky-main/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky-app
  labels:
    app: tasky-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky-app
  template:
    metadata:
      labels:
        app: tasky-app
    spec:
      serviceAccountName: tasky-admin-sa
      containers:
      - name: tasky-app
        image: ghcr.io/kmt0297/tasky-main:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: ghcr.io
