tasky-main/tasky-main/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
spec:
  selector:
    app: tasky-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
